--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -11,7 +11,8 @@
 // yourself. This means that changes that should be small, such as tweaking the
 // coloring or the sizing, can be done in one place, not all over the stylesheet.
 
-$base-font: 		"Rubik", "Source Sans Pro", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+$base-font: 	"Rubik", "Source Sans Pro", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;;
+
 $header-font: 		$base-font;
 $ms-base:           1em, .875em;
 $ms-ratio:          1.618;
